# ebook-creator

./: .gitignore  merge-and-ocr.py  pyproject.toml
pdf_processor/: UI.py  batchextract.py  main.py  pdfmerger.py
