[tool.poetry]
name = "pdf_processor"
authors = ["Severin Gartland <sfgartland@hotmail.com>"]
version = "0.1.0"
description = "Tool to process PDF's"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-processor = "pdf_processor.main:app"

[tool.poetry.dependencies]
python = ">3.10"
pagerange = {git="https://github.com/taylorzr/pagerange"}

# Command line tools that need to be installed?
# pdftk
# pdftoppm
# magick
typer = "^0.9.0"
rich = "^13.7.0"
pagelabels = "^1.2.0"
pdfsak = "^1.3.4"
ocrmypdf = "^16.0.4"


